--- a/src/frontend/app/ui/gallery/search/search.gallery.component.css
+++ b/src/frontend/app/ui/gallery/search/search.gallery.component.css
@@ -2,6 +2,10 @@ form {
   padding-right: 1em;
 }
 
+.lh-0{
+  line-height: 0;
+}
+
 @media screen and ( min-width: 1200px) {
   .search-field {
     max-width: 400px;
